NEXT-208 - Fixed grid selection and scrollbar issue

--- a/src/Administration/Resources/administration/src/app/component/grid/sw-grid/sw-grid.less
+++ b/src/Administration/Resources/administration/src/app/component/grid/sw-grid/sw-grid.less
@@ -72,16 +72,11 @@
         grid-auto-flow: column;
         background-color: @sw-grid-header-color-background;
         border-bottom: 1px solid @sw-grid-header-color-border;
-        padding-right: 17px; // ToDo: Has to be set dynamically for the scrollbar width
 
         .sw-grid-column {
             font-size: 16px;
             font-weight: bold;
             color: @sw-grid-header-color-text;
-
-            &:last-child {
-                border-right: 0 none;
-            }
 
             &.is--sortable {
                 cursor: pointer;
@@ -101,7 +96,7 @@
     .sw-grid__body {
         justify-self: stretch;
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 
     .sw-grid__item {
@@ -126,6 +121,10 @@
             background: @sw-grid-item-active-color-background;
             border-bottom: 1px solid @sw-grid-item-active-color-border;
             box-shadow: 0 -1px 0 0 @sw-grid-item-active-color-border;
+        }
+
+        &:first-child.is--selected {
+            box-shadow: inset 0 1px 0 0 @sw-grid-item-active-color-border;
         }
     }
 
